tests/NormalTests/paczka2/big_fuzzy/44560955.err
Error in line 4: VZG S810 -1,7
Error in line 3: VZG S810 5,4
Error in line 5: S810 S4 32,7
Error in line 11: VZG S845 58,1
Error in line 15: eNEEnzyuRVZ S4 62,91
Error in line 26: VZG S4 10,0
Error in line 23: YD6rAskFo S810 92,8
Error in line 32: VZG A65 95,6
Error in line 36: 8sHW03 S810 60,9
Error in line 42: 8HIj A65 10,6
Error in line 46: eNEEnzyuRVZ S845 65,17
Error in line 43: S810 S845 24,0
Error in line 48: S810 S810 25,6
Error in line 20: eNEEnzyuRVZ S4 242,8
Error in line 54: eNEEnzyuRVZ A65 74,0
Error in line 59: eNEEnzyuRVZ S845 54,3
Error in line 62: eNEEnzyuRVZ A65 11,8
Error in line 71: 8sHW03 S4 57,6
Error in line 91: 40GP S845 35,6
Error in line 102: S810 S845 92,38
Error in line 104: YD6rAskFo S4 72,7
Error in line 113: 8HIj S4 70,0
Error in line 117: 8HIj S845 24,5
Error in line 133: 40GP S845 86,3
Error in line 135: 40GP A65 17,3
Error in line 129: 8HIj A65 32,0
Error in line 168: VZG S4 54,9
Error in line 164: S810 S845 16,5
Error in line 173: eNEEnzyuRVZ S810 96,9
Error in line 170: 8sHW03 S4 92,8
Error in line 178: 8sHW03 S810 27,4
Error in line 180: YD6rAskFo S4 19,1
Error in line 183: VZG S845 -1,1
Error in line 181: YD6rAskFo S810 30,4
Error in line 182: S810 S4 36,1
Error in line 197: YD6rAskFo A65 171,8
Error in line 201: YD6rAskFo S810 45,7
Error in line 169: VZG S845 29,4
Error in line 220: 40GP A6) 43,7
Error in line 218: 40GP A65 27,3
Error in line 228: VZG S810 22,7
